--- a/views/login.html
+++ b/views/login.html
@@ -13,8 +13,8 @@
   <body>
     <h1>Login</h1>
 
-
-    <form action="/users/login" method="POST">
+  
+    <form action="http://127.0.0.1:8000/process_post" method="POST">
       <div>
         <input
           type="email"
