--- a/views/register.html
+++ b/views/register.html
@@ -12,7 +12,7 @@
   </head>
   <body>
     <h1>Register</h1>
-    <form action="/users/register" method="POST">
+    <form action="http://127.0.0.1:8000/process_post" method="POST">
       <div>
         <input type="text" id="name" name="name" placeholder="Name" required />
       </div>
